--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "author": "thannia blanchet",
   "private": true,
+  "homepage": "http://thanniab.github.io/pokedexito",
   "dependencies": {
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
@@ -12,7 +13,9 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -29,6 +32,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "gh-pages": "^2.1.1"
   }
 }
