--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "author": "thannia blanchet",
   "private": true,
-  "homepage": "http://thanniab.github.io/pokedexito",
   "dependencies": {
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
@@ -13,9 +12,7 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "start": "react-scripts start"
   },
   "browserslist": {
     "production": [
@@ -32,7 +29,6 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "gh-pages": "^2.1.1"
+    "babel-preset-react": "^6.24.1"
   }
 }
