--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "author": "thannia blanchet",
   "private": true,
+  "engines" : { 
+    "node" : "<17.0.0"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
